# TrashGo_AIRecognition

./: CMakeLists.txt  LICENSE  LICENSE.md  Main.qml  README.md  appicon.rc  main.cpp  version.h.in  version.rc.in
Header Files/: GarbageClassifier.h  GitHubOnline.h  HistoryRecord.h  ImageProcessor.h  IniFileHandler.h  ReturnImage.h  garbageclassifier.h  githubonline.h  historyrecord.h  imageprocessor.h
Qml/: Game.qml  Main.qml
Qml/components/: SettingItem.qml
Qml/components/animation/: CustomizeRipple.qml
Qml/components/button/: SideBarButton.qml  StandardButton.qml
Qml/components/pages/: GarbagePage.qml  HomePage.qml  SettingPage.qml  qmldir
Qml/components/settings/: SettingItem.qml
Source Files/: GarbageClassifier.cpp  GitHubOnline.cpp  HistoryRecord.cpp  ImageProcessor.cpp  IniFileHandler.cpp  Main.qml  ReturnImage.cpp  garbageclassifier.cpp  githubonline.cpp  historyrecord.cpp  imageprocessor.cpp  main.cpp  returnimage.cpp
components/animation/: CustomizeRipple.qml
components/button/: SideBarButton.qml  StandardButton.qml
components/pages/: GarbagePage.qml  HomePage.qml  SettingPage.qml
include/: GarbageClassifier.h  HistoryRecord.h  ImageProcessor.h  IniFileHandler.h  ReturnImage.h
src/: GarbageClassifier.cpp  GitHubOnline.cpp  HistoryRecord.cpp  ImageProcessor.cpp  IniFileHandler.cpp  ReturnImage.cpp
